udemy/ingress/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  apache-deploy
  labels:
    server: apache
spec:
  selector:
    matchLabels:
      server: apache
  replicas: 2
  template:
    metadata:
      labels:
        server: apache
    spec:
      containers:
      - name: apache
        image:  httpd:latest
        resources:
          requests:
            cpu: 200m
            memory: 200Mi
          limits:
            cpu: 400m
            memory: 400Mi
        ports:
        - containerPort:  80
          name:  apache
      restartPolicy: Always
