udemy/ingress/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: apache-service
spec:
  selector:
    server: apache
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
