udemy/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apache-ingress
  # annotations:
  #   nginx.ingress.kubernetes.io/rewrite-target:
  namespace: default
spec:
  rules:
  - host: apache.local 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: apache-service
            port:
              number: 80
